[tool.poetry]
name = "web-scanner"
version = "1.0.0"
description = "Web Application Security Scanner - OWASP Top 10 Basic Security Assessment Tool"
authors = ["Web Security Scanner Team"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/yourusername/web-scanner"
repository = "https://github.com/yourusername/web-scanner"
keywords = ["security", "scanner", "owasp", "web-security", "penetration-testing", "ethical-hacking"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Topic :: Security",
    "Topic :: Internet :: WWW/HTTP",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
requests = "^2.28.0"
urllib3 = "^1.26.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-cov = "^4.0.0"
black = "^23.0.0"
flake8 = "^6.0.0"
mypy = "^1.0.0"

[tool.poetry.scripts]
web-scanner = "web_scanner.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
